argo-rollout/subset/target-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: target-service
  namespace: apex  
  labels:
    app: target-service
spec:
  type: ClusterIP
  ports:
  - port: 8080
    name: http
  selector:
    app: target-service
